# src/index.ts
@@ -1,12 +1,16 @@
 import express from "express";
 import estudiantesRouter from "./routes/estudiantes.routes"
-import type { Request, Response } from "express";
 import swaggerUi from "swagger-ui-express"
 import fs from "node:fs"
 import path from "node:path";
+import cors from 'cors';
 
 const app = express();
-const PORT = 3000;
+const PORT = process.env.PORT ?? 3000;
+
+
+app.use(cors());
+
 
 app.use(express.json())
 const swaggerFilePath = path.resolve("./swagger_output.json")
@@ -17,7 +21,8 @@ if(fs.existsSync(swaggerFilePath)){
   console.log("archivo de swagger no fue encontrado :(")
 }
 
-app.use("/api/estudiantes", estudiantesRouter)
+app.use("/api/students", estudiantesRouter);
+
 
 
 app.listen(PORT, () => {
